--- a/css/detail.css
+++ b/css/detail.css
@@ -13,24 +13,27 @@ main {
   gap: 20px;
 }
 
-.nutritionInfo > * {
-  border: 1px solid yellowgreen;
-  gap: 8px;
+.cate {
+  position: relative;
+  top: 10px;
 }
 
-.right > h2 {
-  display: inline;
-}
-
-.nutritionInfo {
+.nutritionGrid {
+  position: relative;
+  top: 5px;
   padding-top: 20px;
   width: 100%;
   display: grid;
   grid-template-columns: 1fr 1fr;
+  grid-column: 1;
+  gap: 3px;
 }
 
-.info:nth-of-type(0) {
+.nutrition:nth-child(1) {
   grid-column: 1/3;
+  font-size: 1.2rem;
+  font-weight: 600;
+  padding: 10px 0;
 }
 
 #mainImg {
