--- a/css/main.css
+++ b/css/main.css
@@ -47,14 +47,15 @@ h2 {
 }
 
 .category {
-  width: 120px;
-  height: 120px;
+  width: 100px;
+  height: 100px;
   border: 3px solid var(--main-color);
   background-color: var(--light-color);
   border-radius: 50%;
   background-position: center;
   background-repeat: no-repeat;
   position: relative;
+  background-size: 50%;
 }
 
 .category:hover {
@@ -84,6 +85,10 @@ h2 {
   background-image: url("../img/category5.svg");
 }
 #category6 {
+  background-image: url("../img/category6.svg");
+}
+
+#category7 {
   background-image: url("../img/category6.svg");
 }
 
