--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,11 @@ h2 {
   margin: 20px 0;
 }
 
+#count {
+  color: var(--main-color);
+  font-weight: 800;
+}
+
 .categoryList {
   width: 60%;
   margin: auto;
@@ -58,7 +63,7 @@ h2 {
   background-size: 50%;
 }
 
-.category.on {
+.cateOn {
   background-color: var(--main3-color);
 }
 
@@ -71,6 +76,8 @@ h2 {
   bottom: 0;
   width: calc(100% - 6px);
   text-align: center;
+  font-size: 1rem;
+  margin: 5px;
 }
 
 #category1 {
@@ -93,35 +100,56 @@ h2 {
 }
 
 #category7 {
-  background-image: url("../img/category6.svg");
+  background-image: url("../img/other.svg");
+}
+.recipeCount > p {
+  display: block;
 }
 
-.category > p {
-  text-align: center;
-  font-size: 1rem;
-  margin: 5px;
+.recipeCount {
+  display: flex;
+  height: 20px;
+}
+
+.mainSec {
+  position: relative;
 }
 
 .cardListCon {
-  margin: 30px 0;
-}
-
-.cardListCon {
+  position: relative;
+  width: 100%;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
   gap: 20px;
 }
 
-.card > img {
+.card {
+  position: relative;
   width: 100%;
-  height: 70%;
+  height: 350px;
 }
 
+.card > img {
+  width: 100%;
+  height: 60%;
+}
 .card > h3 {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
   font-size: 1.5rem;
   font-weight: bold;
   margin: 20px;
+}
+
+.more {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  color: transparent;
 }
 
 .card > div {
@@ -132,20 +160,12 @@ h2 {
   align-items: center;
 }
 
-.recipelink {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  color: transparent;
-}
-
 /* pagination */
-
 .pageCon {
   display: flex;
   justify-content: center;
+  align-items: center;
+  width: 100%;
   gap: 0.25em;
   margin: 20px;
 }
