[FIX]파일명변경

--- a/css/main.css
+++ b/css/main.css
@@ -181,6 +181,10 @@ h2 {
   outline: none;
 }
 
+.pageCon button:hover {
+  background-color: var(--main3-color);
+}
+
 .pageCon button.on {
   background-color: var(--main2-color);
 }
