--- a/css/common.css
+++ b/css/common.css
@@ -66,10 +66,10 @@ main {
 
 footer {
   position: fixed;
-  /* transform: translateY(-100%); */
   width: 100%;
   height: 30px;
   bottom: 0;
+  left: 0;
   margin: 5px 0;
 }
 
