--- a/css/detail.css
+++ b/css/detail.css
@@ -1,102 +1,139 @@
-h1 {
-  font-weight: bold;
+.titleWrap {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   margin: 20px 0;
 }
 
-main {
+.btns {
   border: 1px solid green;
 }
 
-.firstRow {
-  border: 1px solid red;
-  display: flex;
-  gap: 20px;
-}
-
 .cate {
-  position: relative;
-  top: 10px;
+  margin: 5px 0;
 }
 
-.nutritionGrid {
-  position: relative;
-  top: 5px;
+h1 {
+  display: inline-block;
+}
+
+.mainSection {
+  width: 100%;
+  display: flex;
+}
+
+.mainLeft {
+  width: 65%;
+  margin: 0 20px 0 0;
+}
+
+.mainRight {
+  width: 35%;
+}
+
+img {
+  border-radius: 10px;
+}
+
+.mainLeft > img {
+  width: 100%;
+  height: 400px;
+  object-fit: cover;
+}
+
+.ingredients > * {
   padding-top: 20px;
+}
+
+.ingredients > input {
+  margin: 10px 0;
+}
+
+.calorieInfo {
   width: 100%;
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-column: 1;
-  gap: 3px;
+  gap: 10px;
+  box-shadow: 1px 1px 4px var(--dark2-color);
+  border-radius: 10px;
+  overflow: hidden;
+  padding: 20px;
 }
 
-.nutrition:nth-child(1) {
+.calItem:nth-child(1) {
   grid-column: 1/3;
   font-size: 1.2rem;
   font-weight: 600;
   padding: 10px 0;
 }
 
-#mainImg {
-  width: 65%;
-  height: 400px;
+.calValue {
+  text-align: right;
 }
 
-.cate {
-  display: inline;
+.recipeTip,
+.recipeTag {
+  margin-top: 30px;
 }
 
-.secondRow {
-  padding-top: 20px;
-  display: flex;
-}
-
-.secondRow > * > h2 {
-  padding-bottom: 10px;
-}
-
-.ingredients {
-  border: 1px solid blue;
-  width: 50%;
-}
-
-.cardList {
-  border: 1px solid green;
-  padding-top: 20px;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  gap: 20px;
-  width: 100%;
-  margin: auto;
-}
-
-.tip {
-  width: 50%;
-  border: 1px solid green;
+.fa-solid {
+  color: var(--main-color);
 }
 
 .recipeTip {
-  list-style: none;
-}
-li {
-  text-indent: -18px;
-  margin-left: 18px;
-}
-li::before {
-  content: "";
-  display: inline-block;
-  width: 20px;
-  height: 20px;
-  /* margin-right: 10px; */
-  background: url("../img/liStyle.png");
-  background-size: cover;
+  background-color: var(--main3-color);
+  padding: 20px;
+  border-radius: 10px;
 }
 
-.card > img {
-  width: 100%;
-  height: 60%;
-  object-fit: cover;
+.recipeTip > p,
+.recipeTag > p {
+  margin-top: 20px;
 }
 
-.card > p {
-  height: 40%;
+.recipeTag > p {
+  color: var(--dark3-color);
+  font-weight: 100;
+  font-size: 0.8rem;
+}
+
+h3 {
+  margin: 40px 0 20px 0;
+}
+
+.step {
+  margin: 20px 0;
+  display: flex;
+  justify-content: space-between;
+}
+
+.step > img {
+  width: 400px;
+  height: 250px;
+  margin: 0 10px 0 0;
+}
+
+.idx,
+.explain {
+  margin: 0 10px;
+}
+
+.idx {
+  background-color: var(--main-color);
+  color: var(--light-color);
+  font-size: 1rem;
+  width: 1.5rem;
+  height: 1.5rem;
+  border-radius: 50%;
+  text-align: center;
+  border: 2px solid var(--main-color);
+}
+
+#toListBtn {
+  float: right;
+}
+
+.toList {
+  height: 80px;
 }
